
New Commands:
- Misc: Added "set_primary_window" command
- Misc: Added "add_metrics_window" command
- Misc: Added "add_debug_window" command
- Misc: Added "add_about_window" command
- Misc: Added "add_style_window" command
- Misc: Added "add_documentation_window" command

New Keywords:
- start_dearpygui:    Added "primary_window" keyword

Changes:
- show_metrics:       Moved to simple module
- show_debug:         Moved to simple module
- show_documentation: Moved to simple module
- show_style_editor:  Moved to simple module
- show_about:         Moved to simple module

-----------------------------------------------------------------------
 VERSION 0.4.609 (10/14/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.609

New Commands:
- Items: Added "set_accelerator_callback" command

Changes:
- Menus: Removed tip keyword #274

-----------------------------------------------------------------------
 VERSION 0.4.605
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.605

Updated:
- Dear Imgui:    Revert to Version 1.78

Fixes:
- File selector and dialog work again

-----------------------------------------------------------------------
 VERSION 0.4.602 (10/11/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.602

Updated:
- Python:        Added Python 3.6 Support
- Dear Imgui:    Upgraded to Version 1.79

Fixes:
- Windows:       on_move flag was not being used
- Popup:         mouse button keyword now works

-----------------------------------------------------------------------
 VERSION 0.4.5 (10/6/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.5

Updates: