@@ -402,9 +402,22 @@ namespace Marvel {
 		{
 			pushColorStyles();
 			ImGui::PushID(this);
+			if (!m_enabled)
+			{
+				ImGui::PushStyleColor(ImGuiCol_Text, ImVec4(ImGui::GetStyleColorVec4(ImGuiCol_TextDisabled)));
+				ImVec4 disabled_color = ImVec4(ImGui::GetStyleColorVec4(ImGuiCol_TextDisabled));
+				disabled_color.w = 0.392f;
+				ImGui::PushStyleColor(ImGuiCol_Header, disabled_color);
+				ImGui::PushStyleColor(ImGuiCol_HeaderHovered, disabled_color);
+				ImGui::PushStyleColor(ImGuiCol_HeaderActive, disabled_color);
+				ImGui::PushStyleColor(ImGuiCol_FrameBg, disabled_color);
+				ImGui::PushStyleColor(ImGuiCol_FrameBgHovered, disabled_color);
+				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
+				m_disabled_value = *m_value;
+			}
 
-			if (ImGui::ListBox(m_label.c_str(), m_value, m_charNames.data(), m_names.size(), m_itemsHeight))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+			if (ImGui::ListBox(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_charNames.data(), m_names.size(), m_itemsHeight))
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 
 			// Regular Tooltip (simple)
@@ -412,6 +425,7 @@ namespace Marvel {
 				ImGui::SetTooltip("%s", getTip().c_str());
 
 			ImGui::PopID();
+			if (!m_enabled) ImGui::PopStyleColor(7);
 			popColorStyles();
 		}
 
