@@ -44,6 +44,10 @@ New Commands:
 
 New Keywords:
 - start_dearpygui:    Added "primary_window" keyword
+- add_checkbox:		  Added "enabled" keyword
+- add_radio_button:   Added "enabled" keyword
+- add_listbox:		  Added "enabled" keyword
+- add_combo:		  Added "enabled" keyword
 
 Changes:
 - show_metrics:       Moved to simple module
@@ -52,6 +56,9 @@ Changes:
 - show_style_editor:  Moved to simple module
 - show_about:         Moved to simple module
 
+Backend Maintance:
+- AppItem:			  App item now controls the enabled member
+- AppItemBase :		  App base class hase a disabled value that is used internally only
 -----------------------------------------------------------------------
  VERSION 0.4.609 (10/14/2020)
 -----------------------------------------------------------------------
